# isucon-team25

./: Makefile
webapp/python/: app.py  database.md  pyproject.toml
webapp/python/templates/: banned.html
