[project]
name = "private-isu"
version = "0.1.0"
description = "private-isu webapp implementation for Python"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.0",
    "flask-session[memcached]>=0.8.0",
    "gunicorn>=23.0.0",
    "mysqlclient~=2.2.7",
    "pymemcache>=4.0.0",
    "opentelemetry-api>=1.18.0",
    "opentelemetry-sdk>=1.18.0",
    "opentelemetry-exporter-otlp>=1.18.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.18.0",
    "opentelemetry-instrumentation-flask>=0.41b0",
    "opentelemetry-instrumentation-mysql>=0.41b0",
    "opentelemetry-instrumentation-requests>=0.41b0",
    "mysql-connector-python>=9.3.0",
]
